package EjerciciosIteractivos_Modulo.Logic;

import java.util.ArrayList;

public interface EvaluadorRespuestas {
    ResultadoDeEvaluacion evaluarRespuestas(ArrayList<Respuesta>respuestasUsuario);
}
