package EjerciciosIteractivos_Modulo.Logic;

public enum Lenguaje {
    JAVA,
    PYTHON,
    C,
    PHP;
}
