package EjerciciosIteractivos_Modulo.Logic;

public class ResultadoDeEvaluacion {
    private double porcentajeDeAcerto;

    public ResultadoDeEvaluacion(double porcentajeDeAcerto) {
        this.porcentajeDeAcerto = porcentajeDeAcerto;
    }

    public double getPorcentajeDeAcerto() {
        return porcentajeDeAcerto;
    }

}
